// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline leaves atts alone 1`] = `
"class MyComponent extends Component {}

var p = MyComponent.prototype;
p.__ht = '<div><span></span><span id=\\"hey\\"></span></div>';
p.__wc = [p.__wa('_1_', 0, 0, 0, {
  'name': function (n, o) {
    this.dom._1_.text(this.getName(n, o));
  }
}), p.__wa('_2_', 0, 0, 0, {
  'style': function (n, o) {
    this.dom._2_.att('class', \\"my-style \\" + n);
  }
})];
p.__qc = p.__lu({
  'name': function () {
    return this.props.name;
  },
  'style': function () {
    return this.props.style;
  }
});
p.__ip = {};

p.__bv = function (component, prototype) {
  component.__bd(prototype, false);

  component.dom = {
    '_1_': component.__gw([]),
    '_2_': component.__gw([])
  };
};"
`;

exports[`Inline with different endings 1`] = `
"class MyComponent extends Component {}

var p = MyComponent.prototype;
p.__ht = '<div><span></span><span></span><span></span></div>';
p.__wc = [p.__wa('_1_', 0, 0, 0, {
  'name': function (n, o) {
    this.dom._1_.text(this.getName(n, o));
  }
}), p.__wa('_2_', 0, 0, 0, {
  'name': function (n, o) {
    this.dom._2_.text(this.getName(n, o));
  }
}), p.__wa('_3_', 0, 0, 0, {
  'name': function (n, o) {
    this.dom._3_.text(this.getName());
  }
})];
p.__qc = p.__lu({
  'name': function () {
    return this.props.name;
  }
});
p.__ip = {};

p.__bv = function (component, prototype) {
  component.__bd(prototype, false);

  component.dom = {
    '_1_': component.__gw([]),
    '_2_': component.__gw([]),
    '_3_': component.__gw([])
  };
};"
`;

exports[`Simple inline 1`] = `
"class MyComponent extends Component {}

var p = MyComponent.prototype;
p.__ht = '<div><span></span></div>';
p.__wc = [p.__wa('_1_', 0, 0, 0, {
  'name': function (n, o) {
    this.dom._1_.text(n);
  }
})];
p.__qc = p.__lu({
  'name': function () {
    return this.props.name;
  }
});
p.__ip = {};

p.__bv = function (component, prototype) {
  component.__bd(prototype, false);

  component.dom = {
    '_1_': component.__gw([])
  };
};"
`;
